# better-answers

./: .gitignore  README.md  app.py  generate_failure_graph.py  pyproject.toml
output/: graph_connectivity_gpt-3.5-turbo_1_tries.csv  graph_connectivity_gpt-3.5-turbo_20_tries.csv  graph_connectivity_gpt-4_1_tries_20_depth.csv  graph_connectivity_gpt-4_20_tries.csv  run-graph-connectivity-20-times-gpt-3.5.txt  run-graph-connectivity-20-times-gpt-4.txt
