[tool.poetry]
name = "better-answers-codeinterpreter"
version = "0.1.0"
description = "Showing how Code Interpreter can generate better answers"
authors = ["Aditya Advani <aditya@bestparents.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "better_answers_codeinterpreter"}]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.14.0"
sklearn = "^0.0.post7"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
rich = "^13.4.2"
typer = {extras = ["all"], version = "^0.9.0"}
codeinterpreterapi = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
